Added Next Steps, brief NumerAI overview

--- a/NumerAI Notebook.ipynb
+++ b/NumerAI Notebook.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NumerAI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumerAI is a hedgefund driven by data scientists. It provides anonymized equity data in hopes that participants build models on that data that accurately predicts an equity's performance. NumerAI attempts to monetize by using an ensemble of user-submitted models, and pays their users proportionally to their models role in the ensemble."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
@@ -376,6 +390,22 @@
    "outputs": [],
    "source": [
     "results.to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Experiment with t-SNE over PCA\n",
+    "* Test additional models\n",
+    "* Build an ensemble"
    ]
   },
   {
