predict_proba with Logistic Regression

--- a/NumerAI Notebook.ipynb
+++ b/NumerAI Notebook.ipynb
@@ -273,12 +273,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since all features are anonymous, intuition won't go very far for feature selection. Instead, I'm going to use Principle Component Analysis to reduce the number of features and the correlation between them. NumerAI uses Log Loss as their error metric, which heavily penalizes error. Therefore, although this seems like a classification problem, regression will yield drastically lower Log Loss. Therefore, as a baseline, I'll use Multiple Linear Regression. PCA and Linear Regression can be combined into a pipeline to allow the easy transformation of test data."
+    "Since all features are anonymous, intuition won't go very far for feature selection. Instead, I'm going to use Principle Component Analysis to reduce the number of features and the correlation between them. Then, as a baseline, I'll use Logistic Regression. PCA and Logistic Regression can be combined into a pipeline to allow the easy transformation of test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -286,13 +286,13 @@
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "pipe = Pipeline([('Principle Component Analysis', PCA()), ('Linear Regression', LinearRegression())])"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "pipe = Pipeline([('Principle Component Analysis', PCA()), ('Logistic Regression', LogisticRegression())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -304,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "pipe.fit(xTrain, yTrain)\n",
-    "predictions=pipe.predict(xTest)"
+    "predictions=pipe.predict_proba(xTest)"
    ]
   },
   {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.691756324013\n"
+      "0.6917197336\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
