Corrected Logistic Regression predict_proba output

--- a/NumerAI Notebook.ipynb
+++ b/NumerAI Notebook.ipynb
@@ -361,38 +361,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tournamentPredictions=pipe.predict(testDF.drop(['id', 'era', 'data_type','target'], axis = 1 ))"
+    "tournamentPredictions=pipe.predict_proba(testDF.drop(['id', 'era', 'data_type','target'], axis = 1 ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "results=pd.concat([testDF['id'], pd.Series(tournamentPredictions)], axis=1, keys=['id', 'probability'])"
+    "results=pd.concat([testDF['id'], pd.Series(tournamentPredictions[:,1])], axis=1, keys=['id', 'probability'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
